--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -13,3 +13,6 @@
   community.general.npm:
     path: /home/roboshop/{{COMPONENT}}
   become_user: roboshop
+
+- name: Import system-setup task
+  ansible.builtin.import_tasks: system-setup.yml
