Setting up catalogue

--- a/roles/common/tasks/system-setup.yml
+++ b/roles/common/tasks/system-setup.yml
@@ -13,7 +13,7 @@
 - name: Copy systemd file into new path
   ansible.builtin.copy:
     src: "{{COMPONENT}}.service"
-    dest: /etc/systemd/system/${COMPONENT}.service
+    dest: /etc/systemd/system/{{COMPONENT}}.service
 
 - name: Reload and restarting the service/ setting up the service
   ansible.builtin.systemd:
