--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -22,7 +22,7 @@
 
 - name: Copy RoboShop Nginx Config file
   ansible.builtin.copy:
-    src: roboshop.con
+    src: roboshop.conf
     dest: /etc/nginx/default.d/roboshop.conf
 
 - name: Start nginx
