setting up mysql server

--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -63,5 +63,5 @@
 
 - name: print out
   debug:
-    msg: "{{ out['content'] | b64decode | regex_findall('A temporary password') }}"
+    msg: "{{ out['content'] | b64decode | regex_findall('A temporary password.*') | join ('') }}"
 
