--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -62,6 +62,6 @@
 # to fetch the default password
 
 - name: print out
-  debug:
-    msg: "{{ out['content'] | b64decode | regex_findall('A temporary password.*') | join (' ') | split (' ') }}"
+  ansible.builtin.debug:
+    msg: "{{ out['content'] | b64decode | regex_findall('A temporary password.*') | join (' ') | split (' ') | last }}"
 
