--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -101,5 +101,5 @@
 
 - name: print plugins_status
   ansible.builtin.debug:
-    msg: "{{plugins_status | regex_findall('validate_password') | length}}"
+    msg: "{{plugins_status | regex_findall('validate_password')}}"
 
