--- a/roles/common/tasks/java.yml
+++ b/roles/common/tasks/java.yml
@@ -20,7 +20,7 @@
   ansible.builtin.import_tasks: app-prereq.yml
 
 - name: Install maven dependencies
-  ansible.builtin.shell: mvn clean package && mv target/${COMPONENT}-1.0.jar ${COMPONENT}.jar
+  ansible.builtin.shell: mvn clean package && mv target/{{COMPONENT}}-1.0.jar {{COMPONENT}}.jar
   args:
     chdir: /home/roboshop/{{COMPONENT}}
   become_user: roboshop
