--- a/roles/common/tasks/java.yml
+++ b/roles/common/tasks/java.yml
@@ -1,16 +1,3 @@
-#echo "Install Maven"
-#yum install maven -y  &>>${LOG_FILE}
-#StatusCheck $?
-#
-#APP_PREREQ
-#
-#echo "Download Dependencies & Make Package"
-#mvn clean package &>>${LOG_FILE}
-#mv target/${COMPONENT}-1.0.jar ${COMPONENT}.jar   &>>${LOG_FILE}
-#StatusCheck $?
-#
-#SYSTEMD_SETUP
-
 - name: Install maven
   ansible.builtin.yum:
     name: maven
@@ -19,7 +6,7 @@
 - name: Import app-prereq task
   ansible.builtin.import_tasks: app-prereq.yml
 
-- name: Install maven dependencies
+- name: Install Maven Dependencies
   ansible.builtin.shell: mvn clean package && mv target/{{COMPONENT}}-1.0.jar {{COMPONENT}}.jar
   args:
     chdir: /home/roboshop/{{COMPONENT}}
