--- a/roles/common/tasks/java.yml
+++ b/roles/common/tasks/java.yml
@@ -9,7 +9,7 @@
 - name: Install Maven Dependencies
   ansible.builtin.shell: mvn clean package && mv target/{{COMPONENT}}-1.0.jar {{COMPONENT}}.jar
   args:
-    chdir: /home/roboshop/{{COMPONENT}}-main
+    chdir: /home/roboshop/{{COMPONENT}}
   become_user: roboshop
 
 - name: Import system-setup task
