setting up payment service

--- a/roles/common/tasks/app-prereq.yml
+++ b/roles/common/tasks/app-prereq.yml
@@ -1,6 +1,7 @@
 - name: Add Roboshop Application user
   ansible.builtin.user:
     name: roboshop
+  register: appuser
 
 - name: Removing old/previous content
   ansible.builtin.file:
