setting up payment service

--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -26,7 +26,7 @@
 
 - name: print
   debug:
-    msg: "{{appuser}}"
+    msg: User ID = "{{appuser.uid}}" , Group ID = "{{appuser.group}}"
 
 - name: Import system-setup task
   ansible.builtin.import_tasks: system-setup.yml
