--- a/roles/common/tasks/system-setup.yml
+++ b/roles/common/tasks/system-setup.yml
@@ -1,6 +1,6 @@
 
 - name: Copy systemd file into new path
-  ansible.builtin.copy:
+  ansible.builtin.template:
     src: "{{COMPONENT}}.service"
     dest: /etc/systemd/system/{{COMPONENT}}.service
 
