setting up payment service

--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -22,7 +22,7 @@
   ansible.builtin.lineinfile:
     path: /home/roboshop/{{COMPONENT}}/{{COMPONENT}}.ini
     regexp: "{{item.name}}"
-    line: "{{item.id}}"
+    line: uid = {{item.id}}
   loop:
     - { name: "uid" , id: "{{appuser.uid}}"}
     - { name: "gid" , id: "{{appuser.group}}"}
