--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -18,10 +18,10 @@
   debug:
     msg: User ID = "{{appuser.uid}}" , Group ID = "{{appuser.group}}"
 
-- name: Update user and  group id
+- name: Change UID & GID in App configuration
   ansible.builtin.lineinfile:
     path: /home/roboshop/{{COMPONENT}}/{{COMPONENT}}.ini
-    regexp: "^{{item.name}}"
+    regexp: '^{{item.name}}'
     line: uid = {{item.id}}
   loop:
     - { name: "uid" , id: "{{appuser.uid}}"}
