--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -14,18 +14,18 @@
     requirements: /home/roboshop/{{COMPONENT}}/requirements.txt
     executable: pip3
 
-#- name: print
-#  debug:
-#    msg: User ID = "{{appuser.uid}}" , Group ID = "{{appuser.group}}"
-#
-#- name: Change UID & GID in App configuration
-#  ansible.builtin.lineinfile:
-#    path: /home/roboshop/{{COMPONENT}}/{{COMPONENT}}.ini
-#    regexp: '^{{item.name}}'
-#    line: uid = {{item.id}}
-#  loop:
-#    - { name: "uid" , id: "{{appuser.uid}}"}
-#    - { name: "gid" , id: "{{appuser.group}}"}
-#
-#- name: Import system-setup task
-#  ansible.builtin.import_tasks: system-setup.yml
+- name: print
+  debug:
+    msg: User ID = "{{appuser.uid}}" , Group ID = "{{appuser.group}}"
+
+- name: Change UID & GID in App configuration
+  ansible.builtin.lineinfile:
+    path: /home/roboshop/{{COMPONENT}}/{{COMPONENT}}.ini
+    regexp: '^{{item.name}}'
+    line: uid = {{item.id}}
+  loop:
+    - { name: "uid" , id: "{{appuser.uid}}"}
+    - { name: "gid" , id: "{{appuser.group}}"}
+
+- name: Import system-setup task
+  ansible.builtin.import_tasks: system-setup.yml
