--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -1,27 +1,3 @@
-#LOG_FILE=/tmp/frntend
-#source common.sh
-#
-#echo Installing Nginx
-#yum install nginx -y &>>LOG_FILE
-#StatusCheck $?
-#
-#echo Downloading Nginx web content
-#curl -s -L -o /tmp/frontend.zip "https://github.com/roboshop-devops-project/frontend/archive/main.zip" &>> /tmp/frontend
-#StatusCheck $?
-#
-#echo switch directory
-#cd /usr/share/nginx/html &>>LOG_FILE
-#
-#echo remove previous web content
-#rm -rf * &>>LOG_FILE
-#StatusCheck $?
-#
-#echo unzipping files
-#unzip /tmp/frontend.zip &>>LOG_FILE
-#mv frontend-main/static/* . &>>LOG_FILE
-#mv frontend-main/localhost.conf /etc/nginx/default.d/roboshop.conf &>> /tmp/frontend
-#StatusCheck $?
-#
 #echo Starting Nginx Service
 #systemctl enable nginx &>>LOG_FILE
 #systemctl restart nginx &>>LOG_FILE
@@ -49,8 +25,13 @@
     dest: /usr/share/nginx/html
     remote_src: yes
 
-#- name: copying files to the path
-#  ansible.builtin.copy:
-#    src: /tmp/frontend-main/static/
-#    dest: /usr/share/nginx/html
-#    remote_src: yes
+- name: copying conf to the roboshop.conf
+  ansible.builtin.copy:
+    src: roboshop.conf
+    dest: /etc/nginx/default.d/roboshop.conf
+
+- name: enabling and restarting the service
+  ansible.builtin.systemd:
+    name: nginx
+    enabled: yes
+    state: restarted
