--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -1,35 +1,53 @@
-- name: Setting up mongodb.repo
+#    echo "Downloading Mongodb Schema files"
+#    curl -s -L -o /tmp/mongodb.zip "https://github.com/roboshop-devops-project/mongodb/archive/main.zip" &>>$LOG_FILE
+#    StatusCheck $?
+#
+#    cd /tmp
+#    echo "Extracting mongobd schema files"
+#    unzip mongodb.zip &>>$LOG_FILE
+#    StatusCheck $?
+#
+#    cd mongodb-main
+#    echo "Loading catalogue service schema"
+#    mongo < catalogue.js &>>$LOG_FILE
+#    StatusCheck $?
+#
+#    echo "Loading user service schema"
+#    mongo < users.js &>>$LOG_FILE
+#    StatusCheck $?
+
+- name: setup MongoDB repo file
   ansible.builtin.copy:
-    src: mongo.repo
+    sre: mongo.repo
     dest: /etc/yum.repos.d/mongodb.repo
 
-- name: Installing mongoDB server
+- name: Install and start mongodb service
   ansible.builtin.yum:
-    name: mongodb-org
-    state: installed
+   name: mongodb-org
+   state: installed
 
-- name: Update MongoDB listen  address
+- name: Replacing mongodb listen address
   ansible.builtin.replace:
-      path: /etc/mongod.conf
-      regexp: '127.0.0.1'
-      replace: '0.0.0.0'
+    path: /etc/mongod.conf
+    regexp: '127.0.0.1'
+    replace: '0.0.0.0'
 
-- name: enable and restart mongod service
+- name: Enable and starting Mongodb service
   ansible.builtin.systemd:
     name: mongod
-    state: restarted
     enabled: yes
+    state: started
 
-- name: Download and Unzip schema files
+- name: Download and extracting schema files
   ansible.builtin.unarchive:
-      src: https://github.com/roboshop-devops-project/mongodb/archive/main.zip
-      dest: /tmp
-      remote_src: yes
+    src: https://github.com/roboshop-devops-project/mongodb/archive/main.zip
+    dest: /tmp
+    remote_src: yes
 
-- name: Load schema files
+- name: Load catalogue and users schema file
   community.mongodb.mongodb_shell:
-      file: "/tmp/mongodb-main/{{item}}.js"
-      idempotent: yes
-  loop:
-    - catalogue
-    - users
+    file: "/tmp/mongodb-main/{{item}}.js"
+    idempotent: yes
+    loop:
+      - catalogue
+      - users
