--- a/roles/common/tasks/app-prereq.yml
+++ b/roles/common/tasks/app-prereq.yml
@@ -1,22 +1,37 @@
-- name: Add Roboshop Application user
+
+#    echo "Download ${COMPONENT} Application Code"
+#    curl -s -L -o /tmp/${COMPONENT}.zip "https://github.com/roboshop-devops-project/${COMPONENT}/archive/main.zip" &>>${LOG_FILE}
+#    StatusCheck $?
+#
+#    echo "Clean Old App Content"
+#    cd /home/roboshop && rm -rf ${COMPONENT} &>>${LOG_FILE}
+#    StatusCheck $?
+#
+#    echo "Extract ${COMPONENT} Application Code"
+#    unzip /tmp/${COMPONENT}.zip &>>${LOG_FILE}
+#    StatusCheck $?
+#
+#    mv ${COMPONENT}-main ${COMPONENT} && cd /home/roboshop/${COMPONENT}
+#  }
+
+- name: Adding Roboshop user
   ansible.builtin.user:
     name: roboshop
-  register: appuser
 
-- name: Removing old/previous content
+- name: clearing all the previous files
   ansible.builtin.file:
     path: /home/roboshop/{{COMPONENT}}
     state: absent
 
-- name: Download and extracting application code
+- name: Downloading app code
   ansible.builtin.unarchive:
-    src: https://github.com/roboshop-devops-project/{{COMPONENT}}/archive/main.zip
+    src: https://github.com/roboshop-devops-project/${COMPONENT}/archive/main.zip
     dest: /tmp
     remote_src: yes
 
-- name: copy extracted content
+- name: moving the code to specified path
   ansible.builtin.copy:
-    src: /tmp/{{COMPONENT}}-main
-    dest: /home/roboshop/{{COMPONENT}}/
+    src: /tmp/{{COMPONENT}}-main/
+    dest: /home/roboshop/{{COMPONENT}}
     remote_src: yes
   become_user: roboshop
