--- a/roles/common/tasks/app-prereq.yml
+++ b/roles/common/tasks/app-prereq.yml
@@ -9,7 +9,7 @@
 
 - name: Downloading app code
   ansible.builtin.unarchive:
-    src: https://github.com/roboshop-devops-project/${COMPONENT}/archive/main.zip
+    src: https://github.com/roboshop-devops-project/{{COMPONENT}}/archive/main.zip
     dest: /tmp
     remote_src: yes
 
