--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -29,9 +29,10 @@
   ansible.builtin.copy:
     src: roboshop.conf
     dest: /etc/nginx/default.d/roboshop.conf
+  notify: Restart Nginx Service
 
 - name: enabling and restarting the service
   ansible.builtin.systemd:
     name: nginx
     enabled: yes
-    state: restarted
+    state: started
