--- a/roles/frontend/templates/roboshop.conf
+++ b/roles/frontend/templates/roboshop.conf
@@ -13,12 +13,12 @@
 
   location /api/catalogue/ { proxy_pass http://catalogue-{{ENV}}.roboshop.internal:8080/; }
 
-  location /api/user/ { proxy_pass http://user-{{ENV}}.roboshop.internal:8080/; }
-  location /api/cart/ { proxy_pass http://cart-{{ENV}}.roboshop.internal:8080/; }
+  location /api/user/ { proxy_pass {{ lookup('aws_ssm', 'roboshop.dev.catalogue.MONGO_URL', region='us-east-1' ) }}; }
+  location /api/cart/ { proxy_pass {{ lookup('aws_ssm', 'roboshop.dev.catalogue.MONGO_URL', region='us-east-1' ) }}; }
 
-  location /api/shipping/ { proxy_pass http://shipping-{{ENV}}.roboshop.internal:8080/; }
+  location /api/shipping/ { proxy_pass {{ lookup('aws_ssm', 'roboshop.dev.catalogue.MONGO_URL', region='us-east-1' ) }}; }
 
-  location /api/payment/ { proxy_pass http://payment-{{ENV}}.roboshop.internal:8080/; }
+  location /api/payment/ { proxy_pass {{ lookup('aws_ssm', 'roboshop.dev.catalogue.MONGO_URL', region='us-east-1' ) }}; }
 
   location /nginx_status {
     stub_status on;
