--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -7,3 +7,10 @@
   ansible.builtin.systemd:
     name: prometheus
     state: restarted
+
+- name: wait for prometheus server to start
+  ansible.builtin.wait_for:
+    host: 0.0.0.0
+    port: 9090
+    delay: 10
+    timeout: 30
