--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -23,3 +23,7 @@ scrape_configs:
   - job_name: "test-nodes"
     static_configs:
       - targets: ["34.239.226.76:9100"]
+  - job_name: 'node'
+    ec2_sd_configs:
+      - region: us-east-1
+        port: 9090
