--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -27,3 +27,6 @@ scrape_configs:
     ec2_sd_configs:
       - region: us-east-1
         port: 9090
+    relabel_configs:
+    - source_labels: [ __meta_ec2_instance_id ]
+      target_label: name
