--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -29,4 +29,4 @@ scrape_configs:
         port: 9090
     relabel_configs:
     - source_labels: [ __meta_ec2_instance_id ]
-      target_label: name
+      target_label: Name
