--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -28,5 +28,5 @@ scrape_configs:
       - region: us-east-1
         port: 9090
     relabel_configs:
-    - source_labels: [ __meta_ec2_instance_id ]
+    - source_labels: [ __meta_ec2_Name]
       target_label: Name
