updating names in place of instance id's in prometheus server

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,3 +1,6 @@
 - name: set hostname
   ansible.builtin.shell: set-hostname {{COMPONENT}}
   become: true
+
+- name: Install node exporter
+  ansible.builtin.shell: labauto prometheus-node-exporter
