--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -27,6 +27,13 @@ scrape_configs:
     ec2_sd_configs:
       - region: us-east-1
         port: 9090
+        filter:
+          - name: "tag:Monitor"
+            value: ["yes"]
     relabel_configs:
     - source_labels: [ __meta_ec2_tag_Name]
       target_label: Name
+    - source_labels: [ __meta_ec2_tag_COMPONENT ]
+      target_label: COMPONENT
+    - source_labels: [ __meta_ec2_tag_ENV ]
+      target_label: ENV
