updating names in place of instance id's in prometheus server

--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -21,13 +21,13 @@ scrape_configs:
     static_configs:
       - targets: ["localhost:9090"]
 
-  - job_name: 'node'
+  - job_name: 'ec2_nodes'
     ec2_sd_configs:
       - region: us-east-1
         port: 9100
-        filter:
+        filters:
           - name: "tag:Monitor"
-            value: ["yes"]
+            values: ["yes"]
     relabel_configs:
     - source_labels: [ __meta_ec2_tag_Name]
       target_label: Name
