updating names in place of instance id's in prometheus server

--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -75,7 +75,7 @@
 - name: Check mysql credentials
   community.mysql.mysql_info:
     login_user: root
-    login_password: "{{SECRETS.ROBOSHOP_MYSQL_PASSWORD}}"
+    login_password: "{{ROBOSHOP_MYSQL_PASSWORD}}"
     filter: version
   ignore_errors: yes
   register: mysql_conn_status
@@ -94,7 +94,7 @@
   community.mysql.mysql_query:
     query: 'show plugins'
     login_user: root
-    login_password: "{{SECRETS.ROBOSHOP_MYSQL_PASSWORD}}"
+    login_password: "{{ROBOSHOP_MYSQL_PASSWORD}}"
   ignore_errors: yes
   register: plugins_status
 
@@ -102,7 +102,7 @@
   community.mysql.mysql_query:
     query: 'uninstall plugin validate_password'
     login_user: root
-    login_password: "{{SECRETS.ROBOSHOP_MYSQL_PASSWORD}}"
+    login_password: "{{ROBOSHOP_MYSQL_PASSWORD}}"
   when: plugins_status | regex_findall('validate_password') | length > 0
 
 - name: Download and Unzip schema files
@@ -117,4 +117,4 @@
     name: all
     target: /tmp/mysql-main/shipping.sql
     login_user: root
-    login_password: "{{SECRETS.ROBOSHOP_MYSQL_PASSWORD}}"
+    login_password: "{{ROBOSHOP_MYSQL_PASSWORD}}"
