--- a/roles/rabbitmq/vars/main.yml
+++ b/roles/rabbitmq/vars/main.yml
@@ -1,4 +1,4 @@
 COMPONENT: rabbitmq
-SECRETS: "{{lookup('amazon.aws.aws_secret', 'roboshop/all-secrets', region='us-east-1')}}"
+SECRETS: "{{lookup('amazon.aws.aws_secret', 'roboshop/all', region='us-east-1')}}"
 ROBOSHOP_RABBITMQ_PASSWORD: "{{SECRETS.ROBOSHOP_RABBITMQ_PASSWORD}}"
 ROBOSHOP_RABBITMQ_USER: "{{SECRETS.ROBOSHOP_RABBITMQ_USER}}"
