updating names in place of instance id's in prometheus server

--- a/roles/payment/vars/main.yml
+++ b/roles/payment/vars/main.yml
@@ -1,2 +1,2 @@
 COMPONENT: payment
-SECRETS: "{{lookup('amazon.aws.aws_secret', 'roboshop/all-secrets', region='us-east-1')}}"
+SECRETS: "{{lookup('amazon.aws.aws_secret', 'roboshop/all', region='us-east-1')}}"
