--- a/roles/dispatch/tasks/main.yml
+++ b/roles/dispatch/tasks/main.yml
@@ -26,4 +26,4 @@
   become_user: roboshop
 
 - name: setting up dispatch service
-  ansible.builtin.shell: go mod init dispatch; go get /home/ronoshop/{{COMPONENT}}/main.go
+  ansible.builtin.shell: go mod init dispatch; go get /home/roboshop/{{COMPONENT}}/main.go
