updating dispatch service

--- a/roles/dispatch/tasks/main.yml
+++ b/roles/dispatch/tasks/main.yml
@@ -30,3 +30,10 @@
 
 - name: running the dependencies
   ansible.builtin.shell: go get main.go
+
+- name: Run Go container
+  podman_container:
+    name: dispatch
+    image: golang
+    command: go mod init
+    rm: true
