--- a/roles/dispatch/tasks/main.yml
+++ b/roles/dispatch/tasks/main.yml
@@ -31,9 +31,4 @@
 - name: running the dependencies
   ansible.builtin.shell: go get main.go
 
-- name: Run Go container
-  ansible.builtin.go:
-    name: dispatch
-    image: golang
-    command: go mod init
-    rm: true
+- go.mod: dispatch
