--- a/roles/dispatch/tasks/main.yml
+++ b/roles/dispatch/tasks/main.yml
@@ -26,9 +26,4 @@
   become_user: roboshop
 
 - name: setting up dispatch service
-  ansible.builtin.shell: go mod init dispatch
-
-- name: running the dependencies
-  ansible.builtin.shell: go get main.go
-
-- go.mod: dispatch
+  go.mod: dispatch
