updating dispatch service

--- a/roles/dispatch/tasks/main.yml
+++ b/roles/dispatch/tasks/main.yml
@@ -26,4 +26,4 @@
   become_user: roboshop
 
 - name: setting up dispatch service
-  go.mod: dispatch
+  go.run: /home/roboshop/{{COMPONENT}}/main.go
