--- a/roles/dispatch/tasks/main.yml
+++ b/roles/dispatch/tasks/main.yml
@@ -26,4 +26,4 @@
   become_user: roboshop
 
 - name: creating a dispatch module
-  ansible.builtin.shell: go mod init dispatch
+  ansible.builtin.shell: go get /home/roboshop/{{COMPONENT}}/main.go
