--- a/roles/dispatch/tasks/main.yml
+++ b/roles/dispatch/tasks/main.yml
@@ -26,4 +26,4 @@
   become_user: roboshop
 
 - name: creating a dispatch module
-  ansible.builtin.shell: go.mod [main.go]
+  ansible.builtin.shell: go mod init /home/roboshop/dispatch/go.mod
