--- a/roles/prometheus/tasks/main.yml
+++ b/roles/prometheus/tasks/main.yml
@@ -1,7 +1,10 @@
 - name: copy prometheus config file
   ansible.builtin.template:
-    src: prometheus.yml
-    dest: /opt/prometheus/prometheus.yml
+    src: "{{item}}"
+    dest: /opt/prometheus/{{item}}
+    loop:
+      - prometheus.yml
+      - record-rules.yml
 
 - name: Restart prometheus server
   ansible.builtin.systemd:
