--- a/roles/prometheus/templates/record-rules.yml
+++ b/roles/prometheus/templates/record-rules.yml
@@ -1,5 +1,5 @@
 groups:
-  - name: record-rules
+  - name: custom
     rules:
       - record: node_memory_used_percent
         expr: 100 -(((node_memory_MemFree_bytes + node_memory_Cached_bytes)/node_memory_MemTotal_bytes)*100)
