--- a/roles/prometheus/templates/alert-rules.yml
+++ b/roles/prometheus/templates/alert-rules.yml
@@ -25,18 +25,18 @@ groups:
         labels:
           severity: critical
         annotations:
-          { % raw % }summary: "High Memory Usage - [{{ $labels.Name }}]"{ % endraw % }
+          {% raw %}summary: "High CPU Usage - [{{ $labels.Name }}]"{% endraw %}
 
-          { % raw % }description: "High Memory Usage - [{{ $labels.Name }}]\n Private IP Address = [{{ $labels.Name }}]"{ % endraw % }
+          {% raw %}description: "High CPU Usage - [{{ $labels.Name }}]\n Private IP Address = [{{ $labels.Name }}]"{% endraw %}
 
-{% for component in components %}
+ {% for component in components %}
       - alert: ServiceDown
-        expr: node_systemd_unit_state{name="{{component}}.service",state="active} < 1
+        expr: node_systemd_unit_state{name="{{component}}.service",state="active"} < 1
         labels:
           severity: critical
         annotations:
           summary: "{{component}} Service Down -{% raw %} [{{ $labels.Name }}]"{% endraw %}
 
-          description: "{{component}} Service Down -{% raw %} [{{ $labels.Name }}]\n Private IP Address = [{{ $labels.Name }}]"{ % endraw % }
+          description: "{{component}} Service Down -{% raw %} [{{ $labels.Name }}]\n Private IP Address = [{{ $labels.Name }}]"{% endraw %}
 
-{ % endfor % }
+ {% endfor %}
