--- a/roles/prometheus/templates/alert-rules.yml
+++ b/roles/prometheus/templates/alert-rules.yml
@@ -19,7 +19,7 @@ groups:
           {% raw %}summary: "High Memory Usage - [{{ $labels.Name }}]"{% endraw %}
 
           {% raw %}description: "High Memory Usage - [{{ $labels.Name }}]\n Private IP Address = [{{ $labels.Name }}]"{% endraw %}
-
+  {% for component in components %}
       - alert: SeviceDown
         expr: node_systemd_unit_state{name="{{component}}.service",state="active"} < 1
         labels:
@@ -29,6 +29,7 @@ groups:
 
           description: "{{component}} Service Down -{% raw %} [{{ $labels.Name }}]\n Private IP Address = [{{ $labels.Name }}]"{% endraw %}
 
+  {% endfor %}
 
 
 
