--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -4,3 +4,10 @@
 
 - name: Install node exporter
   ansible.builtin.shell: labauto prometheus-node-exporter
+  when: PROMETHEUS_MONITOR | bool
+
+- name: Setup Rsyslog config
+  when: RSYSLOG_CONFIG | bool
+  ansible.builtin.import_role:
+    name: elk
+    tasks_from: rsyslog
