--- a/roles/payment/vars/main.yml
+++ b/roles/payment/vars/main.yml
@@ -1,2 +1,4 @@
 COMPONENT: payment
 SECRETS: "{{lookup('amazon.aws.aws_secret', 'roboshop/all', region='us-east-1')}}"
+PROMETHEUS_MONITOR: yes
+RSYSLOG_CONFIG: yes
