--- a/roles/elk/tasks/rsyslog.yml
+++ b/roles/elk/tasks/rsyslog.yml
@@ -1,5 +1,5 @@
 - name: Update the rsyslog config
   ansible.builtin.template:
     src: rsyslog.conf
-    dest: /var/rsyslog.d/roboshop.conf
+    dest: /etc/rsyslog.d/roboshop.conf
   notify: Restart rsyslog
