updating nginx conf file

--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -25,6 +25,12 @@
     dest: /usr/share/nginx/html
     remote_src: yes
 
+- name: copying nginx conf file to change log format
+  ansible.builtin.template:
+    src: nginx.conf
+    dest: /etc/nginx/nginx.conf
+  notify: Restart Nginx Service
+
 - name: copying conf to the roboshop.conf
   ansible.builtin.template:
     src: roboshop.conf
