setting up elk server

--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -42,3 +42,8 @@
     name: nginx
     enabled: yes
     state: started
+
+- name: Install filebeat
+  ansible.builtin.import_role:
+    name: elk
+    tasks_from: filebeat
