--- a/roles/elk/tasks/filebeat.yml
+++ b/roles/elk/tasks/filebeat.yml
@@ -7,3 +7,14 @@
   ansible.builtin.yum:
     name: filebeat
     state: installed
+
+- name: Copy filebeat config
+  ansible.builtin.template:
+    src: filebeat.yml
+    dest: /etc/filebeat/filebeat.yml
+
+- name: Restart Filebeat service
+  ansible.builtin.systemd:
+    name: filebeat
+    state: restarted
+    enabled: yes
