--- a/roles/elk/tasks/logstash.yml
+++ b/roles/elk/tasks/logstash.yml
@@ -7,3 +7,10 @@
   ansible.builtin.systemd:
     name: logstash
     state: restarted
+
+- name: wait for logstash service to start
+  ansible.builtin.wait_for:
+    host: 0.0.0.0
+    port: 5044
+    delay: 30
+    timeout: 10
