--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -11,3 +11,10 @@
   ansible.builtin.import_role:
     name: elk
     tasks_from: rsyslog
+
+- name: Install botocore and boto3
+  ansible.builtin.pip:
+    name:
+      - botocore
+      - boto3
+    executable: pip3.9
