--- a/roles/elk/tasks/logstash.yml
+++ b/roles/elk/tasks/logstash.yml
@@ -8,4 +8,9 @@
     name: logstash
     state: restarted
 
-
+- name: wait for logstash service to start
+  ansible.builtin.wait_for:
+    host: 0.0.0.0
+    port: 5044
+    delay: 60
+    timeout: 60
