--- a/roles/elk/tasks/logstash.yml
+++ b/roles/elk/tasks/logstash.yml
@@ -9,8 +9,4 @@
     state: restarted
 
 - name: wait for logstash service to start
-  ansible.builtin.wait_for:
-    host: 0.0.0.0
-    port: 5044
-    delay: 60
-    timeout: 60
+  ansible.builtin.shell: sleep 60 && netstat -lntp | grep 5044
