setting up elk server

--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -6,7 +6,7 @@ input {
 
 filter {
   grok {
-    match => { "message" => "%{IP:user_ip}%{SPACE}%{HTTPDATE:time_stamp}%{SPACE}%{WORD:http_method}%{SPACE}%{PATH:api_path}%{SPACE}%{WORD:proto}/%{NUMBER:proto_version}%{SPACE}%{NUMBER:response_code:int}%{SPACE}%{NUMBER:response_code:float}%{SPACE}%{QUOTEDSTRING:request_url}" }
+    match => { "message" => "%{IP:user_ip}%{SPACE}%{HTTPDATE:time_stamp}%{SPACE}%{WORD:http_method}%{SPACE}%{PATH:api_path}%{SPACE}%{WORD:proto}/%{NUMBER:proto_version}%{SPACE}%{NUMBER:response_code:int}%{SPACE}%{NUMBER:response_time:float}%{SPACE}%{QUOTEDSTRING:request_url}" }
   }
 }
 
