setting up elk server

--- a/roles/elk/templates/filebeat.yml
+++ b/roles/elk/templates/filebeat.yml
@@ -3,7 +3,9 @@ filebeat.inputs:
 - type: log
   enabled: true
   paths:
-      - {{FILEBEAT_INPUT_LOG_FILE}}
+    - {{FILEBEAT_INPUT_LOG_FILE}}
+  fields:
+    COMPONENT: {{COMPONENT}}
 
 output.logstash:
   hosts: ["logstash.roboshop.internal:5044"]
